add support for proxy in install-config and move most variables to group_vars/all.yaml. vcenter_username and vcenter_password kept as vars_prompt to avoid storing them in files.

--- a/templates/install-config.yaml.j2
+++ b/templates/install-config.yaml.j2
@@ -1,5 +1,11 @@
 apiVersion: v1
 baseDomain: {{ base_domain }}
+{% if ocp_http_proxy is defined %}
+proxy:
+  httpProxy: {{ ocp_http_proxy }}
+  httpsProxy: {{ ocp_http_proxy }}
+  noProxy: {{ ocp_noproxy|default(base_domain) }}
+{% endif %}
 compute:
 - hyperthreading: Enabled
   name: worker
